--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,14 @@ apply plugin: 'java'
 
 compileJava.options.encoding = "UTF-8"
 
+repositories {
+    mavenCentral()
+}
+
+dependencies{
+    implementation 'org.jetbrains:annotations:16.0.2'
+}
+
 jar {
     manifest {
         attributes 'Main-Class': 'ru.timeconqueror.fxmlobfuscator.Main'
