--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,8 @@ repositories {
 }
 
 dependencies{
+    compile group: 'commons-io', name: 'commons-io', version: '2.6'
+    
     implementation 'org.jetbrains:annotations:16.0.2'
 }
 
